4-k8-setup-extended/argo-cd/base/argocd-ui.httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-server-ui-localhost
spec:
  parentRefs:
    - name: envoy-gateway
      namespace: envoy-gateway-system
  hostnames:
    - "argocd.localhost"
  rules:
    - matches:
        - path:
            value: "/"
      backendRefs:
        - name: argocd-server
          kind: service
          port: 443 # Envoy will talk to your app over port 443 (HTTP)
